--- a/index.css
+++ b/index.css
@@ -1,77 +1,299 @@
-<!DOCTYPE html>
-<html lang="us" xml:lang="us" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>COAST</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" href="images/favicon.ico">
-<link rel="stylesheet" href="style/coast.css">
-<script type="text/javascript" src="js/coast.js" charset="utf-8" defer></script>
-</head>
-<body>
+body {
+    font-size: 14px;
+	background-color:#000;
+	padding: 0;
+	margin: 0;
+    letter-spacing: 0;
+    text-align: left;
+	color: #6caedd;
+}
 
-<div id="wrap">
+button {
+	padding: 0.8rem;
+	border: 0;
+	outline: none;
+	background-color: #aaa;
+	font-weight: bold;
+}
 
-	<p class="circ-wrapper">
-		<div class="circ"></div>
-		<div class="circ-handle-wrapper">
-			<div id="handle" class="circ-handle"></div>
+button.choice {
+	background-color: #ffc800;
+}
 
-		</div>
-	</p>
-	<div id="l1" class="circ-label circ-l1">0</div>
-	<div id="l2" class="circ-label circ-l2">15</div>
-	<div id="l3" class="circ-label circ-l3">25</div>
-	<div id="l4" class="circ-label circ-l4">37</div>
-	<div id="l5" class="circ-label circ-l5">50Mb</div>
+progress {
+	width: 80%;
+	height: 7px;
+	-webkit-appearance: none;
+	visibility: hidden;
+	margin-bottom: -10px;
+}
 
-	<button id="btnx" data-file="" >Cancel</button>
+progress::-webkit-progress-bar {
+	background-color: #b4ffe0;
+}
 
-	<div class="result-wrapper">
-		<p  id="dl-chart" style="display: block;"></p>
-		<p>
-			<progress value="0" max="100"></progress>
-		</p>
-		<p>
-			<button id="btn1" data-file="10Mb.bin">10Mb</button>
-			<button id="btn2" disabled>100Mb</button>
-			<button id="btn3" disabled>1Gb</button>
-		</p>
-		<p id="download-box" class="dl-result-1">
-			<span id="result">Speedtest</span><br>
-			<span id="eta">choose a size</span>
-		</p>
+progress::-webkit-progress-value {
+	background-color:#00ff9a;
+}
 
-		<p>
-			<div id="latency-box" class="box-latency-upload">
-				<span class="gauge-label">&#x21D4;&nbsp;Latency:&nbsp;</span><br></br>
-				<span id="latency" >0&nbsp;s</span><br></br>
-			</div>
+textarea { width: 100%; height: 180px; color: lightblue;
+	background-color: #333; border: 0px; margin: 0px;
+}
 
-			<div id="upload-box" class="box-latency-upload">
-				<span class="gauge-label">&#x21D1;&nbsp;Upload:&nbsp;</span>
-				<div class="line"></div><br>
-				<div id="speed" style="display: none;">speed: 0 Mbs</div>
-				<div id="average"> 0 Mbs</div>
-			</div>
-
-		</p>
+#wrap {
+	position: absolute;
+	width: 100%;
+	height: 340px;
+	top: 10%;
+	background-color: #333;
+	text-align: center;
+	margin: 0px;
+	margin-top: 50px;
+}
 
 
-	</div>
-	<div class="result-stats" style="display:none;">
-		<table style="width: 100%;">
-			<tr style="width: 100%;">
-				<td>
-					<textarea id="dl-stats"></textarea>
-				</td>
-				<td>
-					<textarea id="ul-stats"></textarea>
-				</td>
-			</tr>
-		</table>
-	</div>
+#btnx {
+	position: absolute;
+	border-radius: 100%;
+	left: 50%;
+	top: 100px;
+	display: none;
+	margin-left: -35px;
+	margin-top: -15px;
+	background-color: #ffc800;
+}
 
-</div>
-<p class="ua"><script>document.write(window.navigator.userAgent)</script></p>
-</body>
-</html>
+#dl-chart {
+	min-height: 0px;
+	margin-bottom: -25px;
+}
+
+#eta {
+	font-variant-numeric: tabular-nums;
+}
+
+.box-latency-upload {
+	position: absolute;
+	top: -60px;
+	left: 200px;
+	font-size: 1.3em;
+	background-color: #666;
+	width: 80px;
+	height: 80px;
+	border-radius: .2em;
+	padding: 10px;
+	display: none;
+	border-radius: 100%;
+	font-size: small;
+	border: 2px solid #6caedd;
+}
+
+#download-box {
+	left: 35px;
+}
+
+#latency-box {
+	left: 230px;
+}
+
+#upload-box {
+	left: -150px;
+}
+
+.dl-result-1 {
+	position: absolute;
+	top: -70px;
+	left: 40px;
+	transition: .5s;
+}
+
+.dl-result-2 {
+	position: absolute;
+	top: -120px;
+	left: 40px;
+	transition: .5s;
+}
+
+#result {
+	font-size: 1.5rem;
+	font-variant-numeric: tabular-nums;
+}
+
+#resultDone {
+	font-size: 2rem;
+	font-weight: bold;
+}
+
+
+.circ {
+	border-radius: 100%;
+	width: 255px;
+	height: 255px;
+	display: inline-block;
+	background-color: #333;
+	border-top: 15px solid transparent;
+	border-left: 15px solid rgb(32, 191, 240);
+	border-right: 15px solid rgb(32, 191, 240);
+	border-bottom: 15px solid rgb(32, 191, 240);
+	transform: rotate(180deg);
+}
+
+.circ-handle {
+	width: 1px;
+	height: 90px;
+	background: rgb(32, 191, 240);
+	border-left: 7px solid rgb(79, 79, 94);
+	border-top-left-radius: 50%;
+	border-right: 7px solid rgb(79, 79, 94);
+	border-top-right-radius: 50%;
+	border-bottom: 15px solid #ccc;
+	position: relative;
+	left:50%;
+	margin-left: 0px;
+	margin-top: 0px;
+	transform: rotate(0deg);
+	transform-origin: 50% 100%;
+	transition: 3ms;
+	z-index: 1000;
+}
+
+.circ-handle-wrapper {
+	width: 200px;
+	height: 200px;
+	position: relative;
+	left:50%;
+	margin-left: -100px;
+	top:-240px;
+	transform: rotate(-135deg);
+	transform-origin:50% 50%;
+}
+
+.circ-wrapper {
+	margin-top: -50px;
+}
+
+.circ-label {
+	position: absolute;
+	top: 185px;
+	left: 50%;
+	font-size: medium;
+	font-family:'Times New Roman', Times, serif;
+	font-weight: bolder;
+	color: #999;
+}
+
+.circ-l1 {
+	margin-left: -90px;
+	margin-top: -10px;
+}
+
+.circ-l2 {
+	margin-top: -130px;
+	margin-left: -115px;
+
+}
+.circ-l3 {
+	margin-top: -205px;
+	margin-left: -15px;
+
+}
+.circ-l4 {
+	margin-top: -130px;
+	margin-left: 90px;
+}
+
+.circ-l5 {
+	margin-top: -10px;
+	margin-left: 60px;
+}
+
+.result-wrapper {
+	position: absolute;
+	top: 195px;
+	left: 50%;
+	margin-left: -90px;
+}
+
+.result-stats {
+	position: absolute;
+	top: 355px;
+	width: 100%;
+}
+
+.gauge-label {
+	color: #fff;
+}
+.gauge-result {
+	color: #000 ;
+}
+
+.gauge-ft-sm {
+	font-size: .6em ;
+}
+
+.line {
+	width: 100%;
+	height: .1em;
+	border-collapse: collapse;
+	border-style: hidden;
+}
+
+.logout input {
+	float: right;
+	padding-right: 4px;
+	height: 30px;
+	width: 80px;
+	background-color: chocolate;
+	border: 0px;
+	border-radius: .2px;
+	margin-right: 4px;
+	cursor: pointer;
+}
+
+.json-pretty {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.json-selected {
+    background-color: rgba(139, 191, 228, 0.19999999999999996);
+}
+
+.json-string {
+    color: #6caedd;
+}
+
+.json-key {
+    color: #ec5f67;
+}
+
+.json-boolean {
+    color: #99c794;
+}
+
+.json-number {
+    color: #99c794;
+}
+
+.navbar {
+    overflow: hidden;
+}
+
+.navbar a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px 32px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navbar a.active {
+    background-color: #27802a;
+    color: white;
+}
+
+.user-info { float: right; text-align: left; width: 100px; }
+
+.ua { position: absolute; top: 35px; left: 5px; max-width: 200px;}
+
+.host { position: absolute; top: 5px; left: 5px; max-width: 200px;}
